# MS-authentication-fastapi

./: .gitignore  Makefile  README.md  docker-compose.stage.yml  pyproject.toml
deploy/: .dockerignore  entrypoint.sh  gunicorn_conf.py  start-celery-beat.sh  start-celery-worker.sh  start-db-init.sh  start-fastapi.sh  start-reload-fastapi.sh
deploy/compose/develop/: docker-compose.yml  fastapi.dockerfile
deploy/compose/local/: docker-compose.yml  fastapi.dockerfile
deploy/compose/test/: docker-compose.yml
docs/readme/: AUTH.md
src/: CHANGELOG.md  alembic.ini  manage.py
src/alembic/: env.py
src/alembic/versions/: 20240920065434_b30000d1508e_.py  20240920123318_2895de300529_.py  20250323133716_f09e832628a5_.py  20250421110616_e296845787bb_.py
src/app/: __init__.py  celery.py  config.py  containers.py  fastapi.py  typer.py
src/app/api/: deps.py  endpoints.py  exception_handlers.py  schemas.py
src/app/domain/common/: enums.py  exceptions.py  models.py  schemas.py
src/app/domain/storage/attachments/: commands.py  containers.py  queries.py  repositories.py  schemas.py  views.py
src/app/domain/users/: containers.py
src/app/domain/users/auth/: commands.py  queries.py  repositories.py  schemas.py  views.py
src/app/domain/users/core/: commands.py  queries.py  repositories.py  schemas.py  tasks.py
src/app/domain/users/management/: commands.py  queries.py  views.py
src/app/domain/users/permissions/: queries.py  schemas.py  services.py
src/app/domain/users/profile/: queries.py
src/app/domain/users/registration/: commands.py  hi.py  views.py
